--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,30 @@
 [build]
   command = "npm run build"
-  publish = "out"
+  publish = ".next"
 
 [build.environment]
   NODE_VERSION = "18"
   NPM_VERSION = "8"
+
+[functions]
+  directory = "netlify/functions"
+  external_node_modules = ["@netlify/functions"]
+  node_bundler = "esbuild"
+
+[[redirects]]
+  from = "/api/groq"
+  to = "/.netlify/functions/groq"
+  status = 200
+
+[[redirects]]
+  from = "/api/contact"
+  to = "/.netlify/functions/contact"
+  status = 200
+
+[[redirects]]
+  from = "/api/adsense"
+  to = "/.netlify/functions/adsense"
+  status = 200
 
 [[redirects]]
   from = "/*"
