--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
-    "export": "next build && next export",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@netlify/functions": "^5.0.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
