--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,10 @@
   NODE_VERSION = "18"
   NPM_VERSION = "8"
 
+[dev]
+  command = "npm run dev"
+  publish = ".next"
+
 [functions]
   directory = "netlify/functions"
   external_node_modules = ["@netlify/functions"]
@@ -24,11 +28,6 @@
 [[redirects]]
   from = "/api/adsense"
   to = "/.netlify/functions/adsense"
-  status = 200
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
   status = 200
 
 [[headers]]
